compiler/testData/cli/jvm/jsr305MigrationDefault.out
compiler/testData/cli/jvm/jsr305Migration.kt:3:19: error: null can not be a konstue of a non-null type String
    annotated.bar(null)
                  ^
COMPILATION_ERROR
